# fastapi-cdk-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
api/: infrastructure.py
api/v1/: main.py  models.py  requirements.txt
api/v1/routers/: __init__.py  songs.py
tests/: test_infrastructure.py
tests/unit/: test_stack.py
